<resources>
    <string name="app_name" translatable="false">RestSys</string>
    <string name="title_activity_food">Jídelníček</string>
    <string name="title_activity_allergens">Alergeny</string>
    <string name="title_activity_login">Přihlášení</string>
    <string name="title_activity_table">Stoly</string>
    <string name="title_activity_order_food">Detail stolu</string>
    <string name="title_activity_employees">Zaměstnanci</string>
    <string name="login_username">Uživatelské jméno</string>
    <string name="login_password">Heslo</string>
    <string name="login_login">Přihlásit se</string>
    <string name="login_back">Zpět na jídelníček</string>
    <string name="employee_first_name">Jméno</string>
    <string name="employee_last_name">Příjmení</string>
    <string name="employee_admin" translatable="false">Admin</string>
    <string name="button_create">Vytvořit</string>
    <string name="food_name">Jméno</string>
    <string name="food_price">Cena</string>
    <string name="food_cooked">Nápoj / Jídlo</string>
    <string name="food_allergens">Alergeny</string>
    <string name="table_type">Typ</string>
    <string name="employee_create">Nový zaměstanec</string>
    <string name="employee_edit">Upravit %s %s</string>
    <string name="employee_delete">Smazat zaměstnance</string>
    <string name="employee_delete_confirm">Opravdu chcete smazat zaměstnance %s %s? Tato akce je nevratná.</string>
    <string name="button_dismiss">Zrušit</string>
    <string name="button_delete">Smazat</string>
    <string name="delete_success">Smazání úspěšné</string>
    <string name="delete_failure">Smazání selhalo s chybou %s</string>
    <string name="button_edit">Upravit</string>
    <string name="error_empty_content">Obsah nenalezen</string>
    <string name="error_bad_request">Chyba: nesprávná data</string>
    <string name="error_unauthorized">Chyba: pro tuto akci potřebujete být přihlášeni</string>
    <string name="error_forbidden">Chyba: přístup k této funkci nemáte povolen</string>
    <string name="error_not_found">Chyba: požadovaný objekt nebyl nalezen</string>
    <string name="error_server">Chyba na straně serveru. Zkuste to znova</string>
    <string name="error_unavailable">Chyba: server je nedostupný</string>
    <string name="error_method_not_allowed">Chyba: tato akce není povolena</string>
    <string name="food_create">Nové jídlo</string>
    <string name="food_edit">Upravit %s</string>
    <string name="food_delete">Smazat jídlo</string>
    <string name="food_delete_confirm">Opravdu chcete smazat jídlo %s? Tato akce je nevratná.</string>
    <string name="error_food_price">Cena musí být kladné celé číslo.</string>
    <string name="login_success">Přihlášení úspěšné (%s %s, ID #%d)</string>
    <string name="login_failure">Přihlášení selhalo (chyba %s)</string>
    <string name="order_cancel">Storno objednávky</string>
    <string name="order_cancel_confirm">Opravdu chcete stornovat objednávku?</string>
    <string name="button_yes">Ano</string>
    <string name="button_no">Ne</string>
    <string name="order_cancel_success">Objednávka úspěšně stornována.</string>
    <string name="order_cancel_failure">Storno objednávky se nepodařilo (chyba %s)</string>
    <string name="order_total">Celkem</string>
    <string name="order_close">Uzavření objednávky</string>
    <string name="order_close_message">Cena celkem: %d,-</string>
    <string name="button_pay">Zaplatit</string>
    <string name="order_close_failure">Uzavření objednávky se nezdařilo (chyba %s)</string>
    <string name="order_close_success">Objednávka byla úspěšně uzavřena.</string>
    <string name="order_update_failure">Změna položek v objednávce selhala (chyba %s)</string>
    <string name="title_food">Jídla</string>
    <string name="title_logout">Odhlásit</string>
    <string name="title_people">Lidé</string>
    <string name="create_success">Vytvoření úspěšné: ID #%s</string>
    <string name="create_edit_failure">Chyba: %s</string>
    <string name="edit_success">Úprava úspěšná</string>
    <string name="table_id">Stůl #%d</string>
    <string name="table_choose_activity">Vyberte aktivitu:</string>
    <string name="table_edit">Upravit stůl #%d</string>
    <string name="table_new">Nový stůl</string>
    <string name="table_order_create_success">Vytvoření objednávky na stole(ch) úspěšné.</string>
    <string name="table_order_create_failure">Vytvoření objednávky na stole(ch) selhalo: %s</string>
</resources>