<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="#ffffff"
        android:fillViewport="true"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="#ffffff"
            android:fillViewport="true"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/create_employee_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"

                android:hint="@string/login_username"
                android:textColor="@android:color/black"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/create_employee_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="4dp"

                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:textColor="@android:color/black"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_employee_username" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/create_employee_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"

                android:hint="@string/employee_first_name"
                android:textColor="@android:color/black"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_employee_password" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/create_employee_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="4dp"

                android:hint="@string/employee_last_name"
                android:textColor="@android:color/black"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_employee_first_name" />

            <TextView
                android:id="@+id/create_employee_admin_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginTop="16dp"

                android:text="@string/employee_admin"
                android:textSize="18sp"
                android:textColor="@android:color/black"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_employee_last_name" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/create_employee_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"

                android:checked="false"
                android:thumb="@drawable/default_thumb"
                app:track="@drawable/default_track"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/create_employee_admin_desc"
                app:layout_constraintBottom_toBottomOf="@id/create_employee_admin_desc" />

            <Button
                android:id="@+id/create_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="16dp"

                android:text="@string/button_create"

                app:layout_constraintStart_toStartOf="@id/create_employee_admin_desc"
                app:layout_constraintEnd_toEndOf="@id/create_employee_admin"
                app:layout_constraintTop_toBottomOf="@id/create_employee_admin_desc"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>